// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// ==============================================================================

// The spec for the evaluator of individuals in this toy project.

edition = "2023";

package brain.evolution.graphs.joy;

// A cost estimator to optimize the number of transform ops in a graph. Will
// only be useful if the mutations can change the size of the (pruned) graph.
message NumTransformsCostEstimatorSpec {
  // If the number of transforms is fewer than this limit, the limit will be
  // used. This means that there is no benefit in using any fewer transforms.
  // If not, there is no limit.
  double min_num_transforms = 1;
}
